Startups Details done

--- a/BePartner_App_Mid/BePartner_App_Mid.csproj
+++ b/BePartner_App_Mid/BePartner_App_Mid.csproj
@@ -2105,7 +2105,51 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Incss\css\fonts\themify.eot" />
+    <Content Include="Incss\css\fonts\themify.ttf" />
+    <Content Include="Incss\css\fonts\themify.woff" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Incss\css\bootstrap.min.css" />
+    <Content Include="Incss\css\fonts\themify.svg" />
+    <Content Include="Incss\css\owl.carousel.min.css" />
+    <Content Include="Incss\css\style.css" />
+    <Content Include="Incss\css\themify-icons.css" />
+    <Content Include="Incss\images\arrow-right.png" />
+    <Content Include="Incss\images\avatar.jpg" />
+    <Content Include="Incss\images\ban-1.png" />
+    <Content Include="Incss\images\company-logo.png" />
+    <Content Include="Incss\images\icons\email.png" />
+    <Content Include="Incss\images\icons\funfact\1.png" />
+    <Content Include="Incss\images\icons\funfact\2.png" />
+    <Content Include="Incss\images\icons\funfact\3.png" />
+    <Content Include="Incss\images\icons\funfact\4.png" />
+    <Content Include="Incss\images\icons\map-marker.png" />
+    <Content Include="Incss\images\icons\phone.png" />
+    <Content Include="Incss\images\instagram\1.jpg" />
+    <Content Include="Incss\images\instagram\2.jpg" />
+    <Content Include="Incss\images\instagram\3.jpg" />
+    <Content Include="Incss\images\instagram\4.jpg" />
+    <Content Include="Incss\images\instagram\5.jpg" />
+    <Content Include="Incss\images\instagram\6.jpg" />
+    <Content Include="Incss\images\liquid-img\1.jpg" />
+    <Content Include="Incss\images\liquid-img\2.jpg" />
+    <Content Include="Incss\images\liquid-img\bg.png" />
+    <Content Include="Incss\images\logo-white.png" />
+    <Content Include="Incss\images\logo.png" />
+    <Content Include="Incss\images\partners\1.png" />
+    <Content Include="Incss\images\partners\2.png" />
+    <Content Include="Incss\images\partners\3.png" />
+    <Content Include="Incss\images\partners\4.png" />
+    <Content Include="Incss\images\post\1.jpg" />
+    <Content Include="Incss\images\post\2.jpg" />
+    <Content Include="Incss\images\post\3.jpg" />
+    <Content Include="Incss\images\team\1.jpg" />
+    <Content Include="Incss\images\team\2.jpg" />
+    <Content Include="Incss\images\team\3.jpg" />
+    <Content Include="Incss\images\video-bg.jpg" />
+    <Content Include="Incss\images\works\1.jpg" />
+    <Content Include="Incss\images\works\2.jpg" />
+    <Content Include="Incss\images\works\3.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -2159,6 +2203,7 @@
     <Content Include="Views\Shared\_In_Layout.cshtml" />
     <Content Include="Views\InHome\InMessenger.cshtml" />
     <Content Include="Views\AD_Home\_AD_Layout.cshtml" />
+    <Content Include="Views\InHome\InBusinessDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
